--- a/Maui_MVVMDemo/Maui_MVVMDemo.csproj
+++ b/Maui_MVVMDemo/Maui_MVVMDemo.csproj
@@ -63,6 +63,9 @@
 	</ItemGroup>
 
 	<ItemGroup>
+	  <MauiXaml Update="MVVM\Views\CommandsView.xaml">
+	    <Generator>MSBuild:Compile</Generator>
+	  </MauiXaml>
 	  <MauiXaml Update="MVVM\Views\ConvertersView.xaml">
 	    <Generator>MSBuild:Compile</Generator>
 	  </MauiXaml>
